Исправления после коммита